<resources>
    <string name="app_name">FoodOrderApp</string>
    <string name="nincs_fi_kod_regisztr_lj_itt">Nincs fiókod? Regisztrálj itt!</string>
    <string name="bejelentkez_s">Bejelentkezés</string>
    <string name="jelsz">Jelszó</string>
    <string name="e_mail">E-mail</string>
    <string name="jelentkezz_be">Jelentkezz be!</string>
    <string name="m_r_van_fi_kod_jelentkezz_be">Már van fiókod? Jelentkezz be!</string>
    <string name="regisztr_lj">Regisztrálj!</string>
    <string name="jelsz_meger_s_t_se">Jelszó megerősítése</string>
    <string name="keresztn_v">Keresztnév</string>
    <string name="vezet_kn_v">Vezetéknév</string>
    <string name="bejelentkez_s_google_fi_kkal">Bejelentkezés Google fiókkal</string>
    <string name="google_ikon">Google ikon</string>
    <string name="bel_p_s_vend_gk_nt">Belépés vendégként</string>
    <string name="icon">icon</string>
    <string name="f_oldal">Főoldal</string>
    <string name="kos_r">Kosár</string>
    <string name="profil">Profil</string>
    <string name="ez_itt_a_f_oldal">Ez itt a főoldal</string>
    <string name="kedvencek">Kedvencek</string>
    <string name="szem_lyes_adatok">Személyes adatok</string>
    <string name="sz_let_si_d_tum_yyyy_mm_dd">Születési dátum (YYYY-MM-DD)</string>
    <string name="item">item</string>
    <string name="men_neve">Menü neve</string>
    <string name="le_r_s">Leírás</string>
    <string name="_1500_ft">1500 Ft</string>
    <string name="kos_rba">Kosárba</string>
    <string name="kedvenc">Kedvenc</string>
</resources>